Using npm to load libraries with package.json

--- a/app/views/toolbar.html
+++ b/app/views/toolbar.html
@@ -4,7 +4,7 @@
         <img src="/images/add-new-white.png" width="40" height="40">
     </div>
     <div flex="30" class="title-try-new">
-      <h1>Try Something</h1>
+      <h1>Try Trello</h1>
     </div>
     <div flex></div>
     <md-button class="md-icon-button" aria-label="Settings" ng-click="vm.toggleShowSettings()">
