Login logout working

--- a/app/views/toolbar.html
+++ b/app/views/toolbar.html
@@ -4,7 +4,7 @@
         <img src="/images/add-new-white.png" width="40" height="40">
     </div>
     <div flex="30" class="title-try-new">
-      <h1>Try Trello</h1>
+      <h2>Trello Checklists</h2>
     </div>
     <div flex></div>
   </div>
