--- a/app/views/toolbar.html
+++ b/app/views/toolbar.html
@@ -1,11 +1,23 @@
-<md-toolbar md-scroll-shrink>
-  <div class="md-toolbar-tools" layout="row">
-    <div flex="20">
-        <img src="/images/add-new-white.png" width="40" height="40">
-    </div>
-    <div flex="30" class="title-try-new">
-      <h2>Trello Checklists</h2>
-    </div>
-    <div flex></div>
-  </div>
-</md-toolbar>
+<div>
+  <div ng-if="!toolbar.showOptions && vm.user.fullName" style="float:left">
+    <h2>{{vm.user.fullName}}</h2>
+  </div> 
+  <md-fab-toolbar md-open="toolbar.showOptions" md-direction="left">
+    <md-fab-trigger class="align-with-text">
+      <md-button aria-label="menu" class="md-fab md-primary">
+        <md-icon md-svg-src="images/icons/dots-vertical.svg"></md-icon>
+      </md-button>
+    </md-fab-trigger>
+    <md-toolbar>
+      <md-fab-actions class="md-toolbar-tools">
+        <md-button ng-click="vm.logout()" aria-label="comment" class="md-icon-button">
+          <md-icon md-svg-src="images/icons/logout.svg">
+          </md-icon>
+        </md-button>
+        <md-button aria-label="photo" class="md-icon-button">
+          <md-icon md-svg-src="images/icons/thumbs.svg"></md-icon>
+        </md-button>
+      </md-fab-actions>
+    </md-toolbar>
+  </md-fab-toolbar>
+</div>
