Showing checklist items and progressbar

--- a/app/css/style.css
+++ b/app/css/style.css
@@ -34,3 +34,12 @@
   margin: 7px
 }
 
+.card-with-no-checklist-items {
+  background-color: #ccc7c7f7;
+  color: #737373;
+}
+
+.no-margin {
+  margin: 0px !important;
+}
+
